--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,9 @@
-/gestoria/
 /acampados/
-/launcher/
 /acampadosPresentacion/
+/actividades/
+/comedor/
+/contabilidad/
 /empleados/
+/gestoria/
+/launcher/
+/sanidad/
